@@ -17,7 +17,7 @@ import org.macausmp.sportsday.SportsDay;
 import org.macausmp.sportsday.customize.CustomizeMusickit;
 import org.macausmp.sportsday.customize.PlayerCustomize;
 import org.macausmp.sportsday.gui.competition.CompetitionInfoGUI;
-import org.macausmp.sportsday.util.CompetitorData;
+import org.macausmp.sportsday.util.ContestantData;
 import org.macausmp.sportsday.util.ItemUtil;
 import org.macausmp.sportsday.util.TextUtil;
 
@@ -25,7 +25,7 @@ import java.util.*;
 
 public abstract class AbstractEvent implements IEvent {
     protected static final SportsDay PLUGIN = SportsDay.getInstance();
-    private static final List<BukkitTask> EVENT_TASKS = new ArrayList<>();
+    private static final Set<BukkitTask> EVENT_TASKS = new HashSet<>();
     private static final Map<Player, IEvent> PRACTICE = new HashMap<>();
     private final String id;
     private final Component name;
@@ -33,8 +33,8 @@ public abstract class AbstractEvent implements IEvent {
     private final Location location;
     private final World world;
     private Status status = Status.IDLE;
-    private final Collection<CompetitorData> competitors = new HashSet<>();
-    private final Map<UUID, CustomizeMusickit> competitorToMusickit = new HashMap<>();
+    private final Collection<ContestantData> contestants = new HashSet<>();
+    private final Map<UUID, CustomizeMusickit> contestantToMusickit = new HashMap<>();
     public static final NamespacedKey IN_GAME = new NamespacedKey(PLUGIN, "in_game");
     private long time;
 
@@ -91,13 +91,13 @@ public abstract class AbstractEvent implements IEvent {
         PRACTICE.clear();
         EVENT_TASKS.forEach(BukkitTask::cancel);
         EVENT_TASKS.clear();
-        competitors.clear();
+        contestants.clear();
         getLeaderboard().clear();
         setStatus(Status.COMING);
-        competitors.addAll(Competitions.getOnlineCompetitors());
-        competitors.forEach(data -> {
+        contestants.addAll(Competitions.getOnlineContestants());
+        contestants.forEach(data -> {
             Player p = data.getPlayer();
-            if (!SportsDay.REFEREE.hasPlayer(p)) p.getInventory().clear();
+            if (!SportsDay.REFEREES.hasPlayer(p)) p.getInventory().clear();
             p.clearActivePotionEffects();
             p.setFireTicks(0);
             p.setGameMode(GameMode.ADVENTURE);
@@ -105,7 +105,7 @@ public abstract class AbstractEvent implements IEvent {
             p.getInventory().setItem(4, ItemUtil.SPRAY);
             p.setBedSpawnLocation(location, true);
             p.teleport(location);
-            competitorToMusickit.put(data.getUUID(), PlayerCustomize.getMusickit(p));
+            contestantToMusickit.put(data.getUUID(), PlayerCustomize.getMusickit(p));
         });
         addRunnable(new BukkitRunnable() {
             int i = PLUGIN.getConfig().getInt("ready_time");
@@ -142,8 +142,8 @@ public abstract class AbstractEvent implements IEvent {
         EVENT_TASKS.forEach(BukkitTask::cancel);
         if (!force) {
             if (!getLeaderboard().isEmpty()) {
-                OfflinePlayer mvp = getLeaderboard().get(0).getOfflinePlayer();
-                CustomizeMusickit musickit = competitorToMusickit.get(mvp.getUniqueId());
+                OfflinePlayer mvp = getLeaderboard().getFirst().getOfflinePlayer();
+                CustomizeMusickit musickit = contestantToMusickit.get(mvp.getUniqueId());
                 if (musickit != null) {
                     Bukkit.getServer().playSound(Sound.sound(musickit.getKey(), Sound.Source.MASTER, 1f, 1f));
                     Bukkit.getServer().sendActionBar(Component.translatable("broadcast.play_mvp_anthem").args(Component.text(Objects.requireNonNull(mvp.getName())).color(NamedTextColor.YELLOW), musickit.getName()));
@@ -171,7 +171,7 @@ public abstract class AbstractEvent implements IEvent {
                 p.teleport(location);
                 p.setGameMode(GameMode.ADVENTURE);
             });
-            Competitions.getOnlineCompetitors().forEach(d -> {
+            Competitions.getOnlineContestants().forEach(d -> {
                 Player p = d.getPlayer();
                 p.getInventory().clear();
                 PlayerCustomize.suitUp(p);
@@ -216,15 +216,15 @@ public abstract class AbstractEvent implements IEvent {
         CompetitionInfoGUI.updateGUI();
     }
 
-    public final Collection<CompetitorData> getCompetitors() {
-        return competitors;
+    public final Collection<ContestantData> getContestants() {
+        return contestants;
     }
 
     @Override
-    public void onDisqualification(@NotNull CompetitorData competitor) {
-        competitors.remove(competitor);
-        getLeaderboard().remove(competitor);
-        Player p = competitor.getPlayer();
+    public void onDisqualification(@NotNull ContestantData contestant) {
+        contestants.remove(contestant);
+        getLeaderboard().remove(contestant);
+        Player p = contestant.getPlayer();
         if (p.isInsideVehicle()) Objects.requireNonNull(p.getVehicle()).remove();
         p.clearActivePotionEffects();
         p.setFireTicks(0);
@@ -245,7 +245,7 @@ public abstract class AbstractEvent implements IEvent {
         p.getInventory().setItem(8, ItemUtil.LEAVE_PRACTICE);
         p.setBedSpawnLocation(location, true);
         p.teleport(location);
-        p.sendMessage(Component.translatable("competitor.practice.teleport.venue").args(name));
+        p.sendMessage(Component.translatable("contestant.practice.teleport.venue").args(name));
         onPractice(p);
         p.playSound(Sound.sound(Key.key("minecraft:entity.arrow.hit_player"), Sound.Source.MASTER, 1f, 1f));
     }
@@ -291,7 +291,7 @@ public abstract class AbstractEvent implements IEvent {
      * @param <T> The event type
      */
     public static <T extends IEvent> boolean inPractice(Player p, T event) {
-        return PRACTICE.containsKey(p) && PRACTICE.get(p).equals(event);
+        return PRACTICE.containsKey(p) && PRACTICE.get(p) == event;
     }
 
     /**
